src/app/globals.css
@import 'tailwindcss';

:root {
  --color-bg: #ffffff;
  --color-surface: #f6f7fb;
  --color-border: #e1e4ed;

  --color-header: #f8f9fc;

  --color-primary: #4a5bff;
  --color-primary-foreground: #ffffff;

  --color-text: #171717;
  --color-text-muted: #7a7f8f;
  --color-subtitle: #4a5bff;

  --color-nav-inactive: #77819f;
  --color-nav-hover: #4a5bff;

  --color-icon: #7f56d9;

  --font-sans: var(--font-raleway), var(--font-inter);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-bg: #141219;
    --color-surface: #1e1c26;
    --color-border: #2a2734;

    --color-header: #15141d;

    --color-primary: #7286ff;
    --color-primary-foreground: #ffffff;

    --color-text: #ffffff;
    --color-text-muted: #7d818d;
    --color-subtitle: #7286ff;

    --color-icon: #7f56d9;

    --color-nav-inactive: #8f9bb7;
    --color-nav-hover: #a8b3ff;
  }
}

@theme inline {
  --color-background: var(--color-bg);
  --color-foreground: var(--color-text);

  --color-surface: var(--color-surface);
  --color-border: var(--color-border);

  --color-primary: var(--color-primary);
  --color-primary-foreground: var(--color-primary-foreground);

  --color-muted: var(--color-text-muted);
  --color-subtitle: var(--color-subtitle);

  --color-nav-inactive: var(--color-nav-inactive);
  --color-nav-hover: var(--color-nav-hover);

  --color-header: var(--color-header);

  --color-icon: var(--color-icon);

  --font-sans: var(--font-raleway), var(--font-inter);
}

body {
  background: var(--color-surface);
  color: var(--color-text);
  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
}

.font-inter {
  font-family: var(--font-inter), Arial, Helvetica, sans-serif;
}

